iosスクリーンショット機能修正 ボタン名変更

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <input type="checkbox" v-model="sixSixRules[activeSet]" />
         </div>
         <div class="screenshot">
-          <button @click="takeScreenshot">Screen Shot</button>
+          <button @click="takeScreenshot">test Screen Shot</button>
         </div>
       </div>
 
